--- a/react-calc/src/components/CalculatorKey.css
+++ b/react-calc/src/components/CalculatorKey.css
@@ -4,6 +4,6 @@ button {
   margin: 0.4rem;
   text-align: center;
   font-size: 150%;
-  border-radius: 0.8rem;
-  box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem grey;
+  border-radius: 10px;
+  /* box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem grey; */
 }
